[package]
name = "ruuvi-collector"
version = "0.2.0"
authors = ["Henrik Lievonen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
futures = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
log = "0.4"
prometheus = "0.11.0"
btleplug =  "0.5"
ruuvi-sensor-protocol = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"